--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Personal Webpage</title>
+    <meta charset="UTF-8">
+    <meta name=viewport" content="width=device-width, initial-scale=1.0">
+    <title>Isaiah Negron - Personal Webpage</title>
 </head>
 <body>
-<h1>Welcome to My Personal Webpage</h1>
-<p>This is a work in progress. Check back soon for updates!</p>
+    <h1> Welcome to My Personal Webpage</h1>
+    <p>This webpage is a work in progress, come back soon for updates.</p>
 </body>
 </html>
